--- a/Exercise05/Exercise_5_solution.ipynb
+++ b/Exercise05/Exercise_5_solution.ipynb
@@ -3,12 +3,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "%pylab notebook"
+    "%matplotlib inline"
    ]
   },
   {
@@ -23,19 +21,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "retval = os.getcwd()\n",
-    "print(\"Current working directory %s\" % retval)\n",
-    "os.chdir(\"hay_model/mod/\")\n",
-    "!nrnivmodl\n",
-    "os.chdir(retval)\n",
-    "\n",
     "from os.path import join\n",
+    "from pylab import *\n",
     "import numpy as np\n",
     "import neuron\n",
     "import LFPy\n",
@@ -46,25 +37,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def return_cell(synaptic_y_pos=900, conductance_type='active', weight=0.001, input_spike_train=np.array([10.])):\n",
+    "# the following will attempt to convert NEURON NMODL (.mod) files into C-language files and \n",
+    "# compile them. This step requires the correct C-compiler, which may depend on your system and \n",
+    "# python (conda) environment and the manner in which NEURON and LFPy was installed. \n",
+    "# \n",
+    "# If you encounter errors, contact the tutor(s) for some technical assistance. \n",
+    "retval = os.getcwd()\n",
+    "print(\"Current working directory %s\" % retval)\n",
+    "os.chdir(join(\"hay_model\", \"mod\"))\n",
+    "!nrnivmodl\n",
+    "os.chdir(retval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neuron.load_mechanisms(join(\"hay_model\", 'mod'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def return_cell(synaptic_y_pos=900, \n",
+    "                conductance_type='active', \n",
+    "                weight=0.001, \n",
+    "                input_spike_train=np.array([10.])):\n",
     "    \"\"\"\n",
     "    Runs a NEURON simulation and returns an LFPy cell object for a single synaptic input.\n",
     "    :param synaptic_y_pos: position along the apical dendrite where the synapse is inserted.\n",
-    "    :param conductance_type: Either 'active' or 'passive'. If 'active' all original ion-channels are included,\n",
+    "    :param conductance_type: Either 'active' or 'passive'. \n",
+    "           If 'active' all original ion-channels are included,\n",
     "           if 'passive' they are all removed, yielding a passive cell model.\n",
     "    :param weight: Strength of synaptic input.\n",
     "    :param input_spike_train: Numpy array containing synaptic spike times\n",
-    "    :return: cell object where cell.imem gives transmembrane currents, cell.vmem gives membrane potentials.\n",
+    "    :return: cell object where cell.imem gives transmembrane currents, \n",
+    "             cell.vmem gives membrane potentials.\n",
     "             See LFPy documentation for more details and examples.\n",
     "    \"\"\"\n",
     "    nrn('forall delete_section()')\n",
-    "    model_path = join('hay_model')\n",
-    "    neuron.load_mechanisms(join(model_path, 'mod'))\n",
+    "    model_path = 'hay_model'\n",
+    "    #neuron.load_mechanisms(join(model_path, 'mod'))\n",
     "    cell_parameters = {\n",
     "        'morphology': join(model_path, 'cell1.hoc'),\n",
     "        'v_init': -65,\n",
@@ -80,7 +101,8 @@
     "    }\n",
     "    cell = LFPy.Cell(**cell_parameters)\n",
     "    synapse_parameters = {\n",
-    "        'idx': cell.get_closest_idx(x=0., y=synaptic_y_pos, z=0.),  # Returns compartment on cell closest to coordinates\n",
+    "        # Returns compartment on cell closest to coordinates:\n",
+    "        'idx': cell.get_closest_idx(x=0., y=synaptic_y_pos, z=0.),  \n",
     "        'e': 0.,\n",
     "        'syntype': 'ExpSyn',\n",
     "        'tau': 10.,\n",
@@ -96,13 +118,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def plot_cell(cell):\n",
     "    cell_plot_idx = 0\n",
+    "    plt.figure(figsize=(12, 8))\n",
     "    subplot(121, aspect='equal')\n",
     "    [plot([cell.xstart[idx], cell.xend[idx]], [cell.ystart[idx], cell.yend[idx]], c='k') \n",
     "     for idx in range(cell.totnsegs)]\n",
@@ -117,9 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def return_soma_v_line(cell, axes, dist):\n",
@@ -132,15 +151,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def plot_v_response_with_distance(conductance_type):\n",
     "    distances = np.linspace(0, 1200, 5)\n",
-    "    close('all')\n",
-    "    fig = figure()\n",
+    "    fig = figure(figsize=(12, 8))\n",
     "    fig.text(0.5, 0.95, conductance_type.capitalize() + ' conductances', ha='center', size=17)\n",
     "    ax1 = subplot(121, ylim=[-0.2, 1.2])\n",
     "    ax2 = subplot(122, ylim=[-65.2, -64])\n",
@@ -154,9 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def coincidence_detection(conductance_type):\n",
@@ -168,12 +182,11 @@
     "                       synaptic_y_pos=1100)\n",
     "    input_idx = cell.synidx[0]\n",
     "    soma_idx = 0\n",
-    "    close('all')\n",
-    "    fig = figure()\n",
+    "    fig = figure(figsize=(12, 8))\n",
     "\n",
     "    fig.text(0.5, 0.95, conductance_type.capitalize() + ' conductances', ha='center', size=17)\n",
     "    subplots_adjust(wspace=0.5, hspace=0.5)\n",
-    "    subplot(121, aspect='equal', frameon=False, xticks=[])\n",
+    "    subplot(121, aspect='equal')\n",
     "    [plot([cell.xstart[idx], cell.xend[idx]], [cell.ystart[idx], cell.yend[idx]], c='k') \n",
     "     for idx in range(cell.totnsegs)]\n",
     "    plot(cell.xmid[cell.synidx], cell.ymid[cell.synidx], 'ro')\n",
@@ -191,23 +204,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__(i)__ For the simplest example of a single spike, uncomment the two first lines in the cell below and run.\n",
+    "__(i)__ For the simplest example of a single spike, uncomment the two first lines in the cell below and execute the block.\n",
     "\n",
-    "__(ii)__ To see the somatic response to increasingly distant apical synaptic input in a passive neuron, uncomment line 1 and 3 in the cell below and run (making several plots at the same time gives figure conflicts, but you may save figures for comparison). To see the same for an active neuron, uncomment lines 1 and 4 and run. We note that the width of the synaptic response increases with distance for the passive case, but not (or much less) for the active case. For the active model, you can also see that the somatic voltage trace resulting from a distal apical input contains a hyperpolarized overshoot (or 'undershoot') after the initial depolarization. This is caused by the IH conductance, and you can read more about it in the reference: Williams SR & Stuart GJ (2000): Site Independence of EPSP Time Course Is Mediated by Dendritic Ih in Neocortical Pyramidal Neurons. J Neurophysiol 83: 3177-3182."
+    "__(ii)__ To see the somatic response to incrementally more distant apical synaptic input in a passive neuron, uncomment line 1 and 3 in the cell below and execute the block. To see the same for an active neuron, uncomment lines 1 and 4 and execute the block. We note that the width of the synaptic response increases with distance for the passive case, but not (or much less) for the active case. For the active model, you can also see that the somatic voltage trace resulting from a distal apical input contains a hyperpolarized overshoot (or 'undershoot') after the initial depolarization. This is caused by the IH conductance, and you can read more about it in the reference: Williams SR & Stuart GJ (2000): Site Independence of EPSP Time Course Is Mediated by Dendritic Ih in Neocortical Pyramidal Neurons. J Neurophysiol 83: 3177-3182."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cell = return_cell(conductance_type='active', weight=0.3)\n",
+    "plot_cell(cell)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "#cell = return_cell(conductance_type='active', weight=0.3)\n",
-    "#plot_cell(cell)\n",
-    "#plot_v_response_with_distance('passive')\n",
-    "#plot_v_response_with_distance('active')\n"
+    "plot_v_response_with_distance('passive')\n",
+    "plot_v_response_with_distance('active')"
    ]
   },
   {
@@ -221,7 +242,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [],
@@ -232,9 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "coincidence_detection('active')"
@@ -243,9 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -266,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
